--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,9 @@
   --container-width-sm: 94%;
   --transition: 0.4s ease;
 }
+.texture_img {
+  background-image: url("images/bg-texture.png");
+}
 body {
   font-family: "Montserrat", sans-serif;
   line-height: 1.7;
@@ -382,6 +385,7 @@ footer {
 .footer_container .box {
   width: 13rem;
   line-height: 2;
+  height: 12rem;
 }
 .footer_container .box h3 {
   margin-bottom: 0.8rem;
@@ -541,5 +545,6 @@ footer {
   }
   footer .footer_container .box {
     width: 15rem;
+    height: auto;
   }
 }
